--- a/swifty-proteins/Base.lproj/Main.storyboard
+++ b/swifty-proteins/Base.lproj/Main.storyboard
@@ -54,11 +54,13 @@
                                 <items>
                                     <navigationItem id="JvO-4Y-ZTQ">
                                         <barButtonItem key="leftBarButtonItem" systemItem="rewind" id="1QB-7Z-LhU">
+                                            <color key="tintColor" systemColor="systemGray3Color"/>
                                             <connections>
                                                 <action selector="goBack:" destination="p3D-Zf-be5" id="LVo-mD-PgG"/>
                                             </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" systemItem="action" id="whX-3h-mEu">
+                                            <color key="tintColor" systemColor="systemGray3Color"/>
                                             <connections>
                                                 <action selector="Share:" destination="p3D-Zf-be5" id="Z11-Xq-AnU"/>
                                             </connections>
@@ -225,6 +227,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray3Color">
+            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
