--- a/swifty-proteins/Base.lproj/Main.storyboard
+++ b/swifty-proteins/Base.lproj/Main.storyboard
@@ -16,26 +16,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="25p-jD-tRh">
-                                <rect key="frame" x="115" y="433" width="174" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="25p-jD-tRh">
+                                <rect key="frame" x="120" y="433" width="174" height="30"/>
                                 <state key="normal" title="TouchID"/>
                                 <connections>
                                     <action selector="TouchIdAuthenticate:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bnn-c3-Zg4"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IuC-Ne-ubU">
-                                <rect key="frame" x="187" y="819" width="30" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="next"/>
-                                <connections>
-                                    <action selector="gonext:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8cN-o9-dih"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="25p-jD-tRh" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="UEK-Ql-tH6"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="25p-jD-tRh" secondAttribute="trailing" constant="120" id="bJL-of-Jdm"/>
+                            <constraint firstItem="25p-jD-tRh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="120" id="qxp-Th-rwy"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="TouchIDBtn" destination="25p-jD-tRh" id="iAW-wJ-krM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
