--- a/swifty-proteins/Base.lproj/Main.storyboard
+++ b/swifty-proteins/Base.lproj/Main.storyboard
@@ -48,30 +48,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7d8-Wq-fsy">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                <items>
-                                    <navigationItem id="JvO-4Y-ZTQ">
-                                        <barButtonItem key="leftBarButtonItem" systemItem="rewind" id="1QB-7Z-LhU">
-                                            <color key="tintColor" systemColor="systemGray3Color"/>
-                                            <connections>
-                                                <action selector="goBack:" destination="p3D-Zf-be5" id="LVo-mD-PgG"/>
-                                            </connections>
-                                        </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="whX-3h-mEu">
-                                            <color key="tintColor" systemColor="systemGray3Color"/>
-                                            <connections>
-                                                <action selector="Share:" destination="p3D-Zf-be5" id="Z11-Xq-AnU"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kbl-Oj-gup">
                                 <rect key="frame" x="0.0" y="813" width="414" height="49"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="49" id="Xx0-FW-jjV"/>
+                                    <constraint firstAttribute="height" constant="49" id="ASB-vk-CFy"/>
                                 </constraints>
                                 <items>
                                     <tabBarItem title="zoom +" image="plus.magnifyingglass" catalog="system" id="D6x-uW-zJc"/>
@@ -98,12 +79,10 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="details" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="MOE-qV-VQs">
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="details" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="MOE-qV-VQs">
                                                 <rect key="frame" x="0.0" y="174" width="201" height="38"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="38" id="V0U-1a-uT0"/>
-                                                </constraints>
                                                 <color key="textColor" systemColor="labelColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -111,49 +90,68 @@
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstItem="OfW-NA-Bxr" firstAttribute="leading" secondItem="BaB-hU-Jdq" secondAttribute="leading" constant="8" id="3C0-7f-GHn"/>
-                                            <constraint firstItem="7IF-kb-pjm" firstAttribute="leading" secondItem="BaB-hU-Jdq" secondAttribute="leading" constant="8" id="7XY-Qf-Nn5"/>
-                                            <constraint firstItem="MOE-qV-VQs" firstAttribute="leading" secondItem="BaB-hU-Jdq" secondAttribute="leading" id="L6C-hQ-7bd"/>
-                                            <constraint firstItem="7IF-kb-pjm" firstAttribute="top" secondItem="BaB-hU-Jdq" secondAttribute="top" constant="8" id="Qzt-nT-NvE"/>
-                                            <constraint firstAttribute="trailing" secondItem="MOE-qV-VQs" secondAttribute="trailing" constant="4" id="XCt-Gh-Iim"/>
-                                            <constraint firstAttribute="trailing" secondItem="OfW-NA-Bxr" secondAttribute="trailing" constant="8" id="euc-z3-rW1"/>
-                                            <constraint firstAttribute="bottom" secondItem="OfW-NA-Bxr" secondAttribute="bottom" id="foJ-Qq-JoK"/>
-                                            <constraint firstItem="OfW-NA-Bxr" firstAttribute="top" secondItem="MOE-qV-VQs" secondAttribute="bottom" constant="8" symbolic="YES" id="sOr-tw-7k5"/>
-                                            <constraint firstAttribute="trailing" secondItem="7IF-kb-pjm" secondAttribute="trailing" constant="8" id="vdF-9d-i4m"/>
+                                            <constraint firstAttribute="height" constant="241" id="IFT-75-AiY"/>
+                                            <constraint firstItem="7IF-kb-pjm" firstAttribute="leading" secondItem="BaB-hU-Jdq" secondAttribute="leading" constant="8" id="M7s-Hl-KiL"/>
+                                            <constraint firstAttribute="width" constant="205" id="TuP-LM-oro"/>
+                                            <constraint firstItem="7IF-kb-pjm" firstAttribute="top" secondItem="BaB-hU-Jdq" secondAttribute="top" constant="8" id="jNn-ED-XH5"/>
+                                            <constraint firstAttribute="trailing" secondItem="7IF-kb-pjm" secondAttribute="trailing" constant="8" id="mCW-kK-9MH"/>
+                                            <constraint firstItem="OfW-NA-Bxr" firstAttribute="leading" secondItem="BaB-hU-Jdq" secondAttribute="leading" constant="8" id="rp7-WC-WO3"/>
+                                            <constraint firstAttribute="bottom" secondItem="OfW-NA-Bxr" secondAttribute="bottom" id="yMU-1S-mJe"/>
+                                            <constraint firstAttribute="trailing" secondItem="OfW-NA-Bxr" secondAttribute="trailing" constant="8" id="zWc-71-D4N"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="BaB-hU-Jdq" firstAttribute="top" secondItem="urW-fs-DPz" secondAttribute="top" id="Qm7-Os-II2"/>
-                                    <constraint firstAttribute="trailing" secondItem="BaB-hU-Jdq" secondAttribute="trailing" id="Uez-ch-E39"/>
-                                    <constraint firstAttribute="bottom" secondItem="BaB-hU-Jdq" secondAttribute="bottom" constant="528" id="dRu-XE-yEq"/>
-                                    <constraint firstItem="BaB-hU-Jdq" firstAttribute="leading" secondItem="urW-fs-DPz" secondAttribute="leading" constant="209" id="rR9-7J-WIJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="BaB-hU-Jdq" secondAttribute="trailing" id="kmG-ZH-lFH"/>
+                                    <constraint firstItem="BaB-hU-Jdq" firstAttribute="top" secondItem="urW-fs-DPz" secondAttribute="top" id="taM-xA-yWy"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vno-DB-P3z">
-                                <rect key="frame" x="186" y="12" width="42" height="21"/>
+                                <rect key="frame" x="186" y="12" width="42" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7d8-Wq-fsy">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="CMr-Dx-kOq"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem id="JvO-4Y-ZTQ">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="rewind" id="1QB-7Z-LhU">
+                                            <color key="tintColor" systemColor="systemGray3Color"/>
+                                            <connections>
+                                                <action selector="goBack:" destination="p3D-Zf-be5" id="LVo-mD-PgG"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="whX-3h-mEu">
+                                            <color key="tintColor" systemColor="systemGray3Color"/>
+                                            <connections>
+                                                <action selector="Share:" destination="p3D-Zf-be5" id="Z11-Xq-AnU"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="uHo-v2-MWF"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="kbl-Oj-gup" firstAttribute="leading" secondItem="urW-fs-DPz" secondAttribute="leading" id="3WC-7j-Xyj"/>
-                            <constraint firstAttribute="trailing" secondItem="7d8-Wq-fsy" secondAttribute="trailing" id="4MZ-I0-Agj"/>
-                            <constraint firstItem="urW-fs-DPz" firstAttribute="trailing" secondItem="uHo-v2-MWF" secondAttribute="trailing" id="4sM-4u-hCL"/>
-                            <constraint firstItem="Vno-DB-P3z" firstAttribute="top" secondItem="gwd-fO-y79" secondAttribute="top" constant="12" id="8C6-NG-x70"/>
-                            <constraint firstItem="kbl-Oj-gup" firstAttribute="top" secondItem="urW-fs-DPz" secondAttribute="bottom" id="9uX-VF-xCX"/>
-                            <constraint firstItem="urW-fs-DPz" firstAttribute="top" secondItem="7d8-Wq-fsy" secondAttribute="bottom" id="Fix-Sj-7Dk"/>
-                            <constraint firstItem="7d8-Wq-fsy" firstAttribute="top" secondItem="gwd-fO-y79" secondAttribute="top" id="IKZ-UQ-SfR"/>
-                            <constraint firstItem="kbl-Oj-gup" firstAttribute="trailing" secondItem="urW-fs-DPz" secondAttribute="trailing" id="OMe-G9-kr7"/>
-                            <constraint firstItem="Vno-DB-P3z" firstAttribute="centerX" secondItem="7d8-Wq-fsy" secondAttribute="centerX" id="dRD-rF-nt1"/>
-                            <constraint firstItem="7d8-Wq-fsy" firstAttribute="leading" secondItem="gwd-fO-y79" secondAttribute="leading" id="fxA-VO-ZFG"/>
-                            <constraint firstItem="kbl-Oj-gup" firstAttribute="bottom" secondItem="uHo-v2-MWF" secondAttribute="bottom" id="kqW-n7-iF1"/>
-                            <constraint firstItem="urW-fs-DPz" firstAttribute="leading" secondItem="uHo-v2-MWF" secondAttribute="leading" id="wFn-Xf-W9d"/>
-                            <constraint firstItem="urW-fs-DPz" firstAttribute="top" secondItem="Vno-DB-P3z" secondAttribute="bottom" constant="11" id="z7c-1H-VKw"/>
+                            <constraint firstItem="7d8-Wq-fsy" firstAttribute="centerY" secondItem="Vno-DB-P3z" secondAttribute="centerY" id="17Y-yi-YI5"/>
+                            <constraint firstItem="7d8-Wq-fsy" firstAttribute="leading" secondItem="kbl-Oj-gup" secondAttribute="leading" id="4yI-VO-UYq"/>
+                            <constraint firstItem="7d8-Wq-fsy" firstAttribute="leading" secondItem="urW-fs-DPz" secondAttribute="leading" id="57f-yk-wen"/>
+                            <constraint firstItem="7d8-Wq-fsy" firstAttribute="centerX" secondItem="Vno-DB-P3z" secondAttribute="centerX" id="5Py-co-Qzg"/>
+                            <constraint firstItem="7d8-Wq-fsy" firstAttribute="top" secondItem="gwd-fO-y79" secondAttribute="top" id="HhA-FO-Dsb"/>
+                            <constraint firstItem="kbl-Oj-gup" firstAttribute="bottom" secondItem="uHo-v2-MWF" secondAttribute="bottom" id="J4J-80-Hgv"/>
+                            <constraint firstItem="kbl-Oj-gup" firstAttribute="top" secondItem="urW-fs-DPz" secondAttribute="bottom" id="ULr-hM-fRE"/>
+                            <constraint firstItem="urW-fs-DPz" firstAttribute="leading" secondItem="uHo-v2-MWF" secondAttribute="leading" id="bCI-85-cXZ"/>
+                            <constraint firstItem="7d8-Wq-fsy" firstAttribute="trailing" secondItem="urW-fs-DPz" secondAttribute="trailing" id="edn-18-uIx"/>
+                            <constraint firstItem="urW-fs-DPz" firstAttribute="top" secondItem="7d8-Wq-fsy" secondAttribute="bottom" id="ji0-W0-cDB"/>
+                            <constraint firstItem="Vno-DB-P3z" firstAttribute="top" secondItem="gwd-fO-y79" secondAttribute="topMargin" constant="-32" id="mRh-zM-59L"/>
+                            <constraint firstItem="7d8-Wq-fsy" firstAttribute="trailing" secondItem="kbl-Oj-gup" secondAttribute="trailing" id="oLN-4Y-h03"/>
+                            <constraint firstItem="urW-fs-DPz" firstAttribute="trailing" secondItem="uHo-v2-MWF" secondAttribute="trailing" id="waE-Rm-vhv"/>
                         </constraints>
                     </view>
                     <connections>
